Move dictionary test runners to dictionary pkg